# pass.sh

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/passsh/: agent.py  cli.py  clipboard.py  crypto.py  entry_ops.py  generator.py  ratelimit.py  session.py  storage.py  tui.py  tui.tcss
tests/: test_agent.py  test_cli.py  test_clipboard.py  test_crypto.py  test_generator.py  test_ratelimit.py  test_storage.py  test_tui.py
